--- a/style/style.scss
+++ b/style/style.scss
@@ -49,7 +49,7 @@ div.container{
     align-items: center;
     color: white;
     overflow: hidden;
-    font-size: 40px;
+    font-size: 2rem;
 }
 
 .buttons{
@@ -85,10 +85,18 @@ div.container{
         width: 70vw;
         margin-left: 15vw;
     }
+
+    .screen{
+        font-size: 2rem;
+    }
 }
 @media screen and (max-width: 600px){
     div.container{
         height: 66vh;
         margin-top: 17vh;
+    }
+
+    .screen{
+        font-size: 1.3rem;
     }
 }
