--- a/style/style.scss
+++ b/style/style.scss
@@ -16,8 +16,9 @@ body{
 }
 
 header h1{
+    text-decoration: underline;
     text-align: center;
-    color: white;
+    color: yellow;
     font-size: 3rem;
 }
 
