added some spacing

--- a/style/style.css
+++ b/style/style.css
@@ -22,7 +22,8 @@ header h1 {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: space-evenly;
+  padding: 0px;
 }
 
 div.container {
